# metaflow-contracts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
metaflow_contracts/: __init__.py  contract.py  errors.py
metaflow_contracts/backends/: __init__.py  plain.py  pydantic.py
tests/: test_adversarial.py  test_contract.py  test_hypothesis.py  test_plain_backend.py  test_pydantic_backend.py
